src/components/Product/ProductDetails.css
.product-details-container {
  width: 100vw;
  padding-left: 2em;
  height: calc(100vh - 4rem - 20px);
  overflow-y: scroll;
  color: #4D4D4D;
  display: flex;
  flex-direction: row;
}
.product-details-left {
  width: 35%;
  height: 100%;
}

.product-details-title {
  width: 20rem;
  font-size: 1.5em;
  margin-bottom: 14px;
  font-family: "Gotham Narrow Book";
  font-weight: 600;
}

.product-details-price-title {
  display: flex;
  flex-direction: row;
  width: 20rem;
}

.product-details-price {
  margin: 0;
  height: 2em;
  margin-bottom: 12px;
  font-size: 1.2em;
  margin-right: 1.2em;
}

.product-details-price-title .Stars {
  align-items: flex-start;
  height: 2em;
}

.product-details-price-title .Stars svg {
  margin-top: .1em;
}

.product-details-slider {
  height: auto;
  width: 20rem;
}

.product-details-left--img-main>div>img {
  box-shadow: var(--shadow-4p);
  /* width: 20rem !important; */
  /* height: 20rem !important; */
  object-fit: contain;
}

.image-gallery-slide-wrapper {
  box-shadow: var(--shadow-4p);
  display: none;
}

.image-gallery-image img {
  object-fit: contain;
  width: 20rem;
  height: 20rem;
}

.image-gallery-bullets .image-gallery-bullet {
  background-color: rgba(184, 190, 224, 0.29);
  box-shadow: 0 1px 0 #757575;
}

.image-gallery-bullets .image-gallery-bullet.active {
  background: rgba(117, 117, 117, 0.35);
  box-shadow: 0 1px 0 #757575;
}

.image-gallery-thumbnails-container {
  margin-top: 10px;
}

.image-gallery-thumbnail {
  width: 5rem;
  height: 5rem;
  margin: 4px;
  border: 1px solid transparent;
}

.image-gallery-thumbnail div img {
  width: 5rem;
  height: 5rem;
  object-fit: scale-down;
  border: 1px solid #eee;
  box-shadow: var(--shadow-3p);
}

.image-gallery-thumbnail.active {
  width: auto;
  height: auto;
  border: 1px solid #ababab;
  border-radius: 2px;
}

.ProductDetails-action {
  text-align: center;
  margin-top: 1.8em;
  width: 20rem;
}

.ProductDetails-action-cart._3tTAW:not([disabled]) {
  background-color: rgba(244, 67, 54,1);
}

.ProductDetails-action-cart {
  font-weight: 600;
  margin: 0em 1em;
}

.ProductDetails-action-cart._3tTAW:not([disabled]):hover {
  background-color: rgba(244, 67, 54, 0.9);
}

.ProductDetails-action-buy._3tTAW:not([disabled]) {
  background-color: rgba(239, 108, 0, 1);
}

.ProductDetails-action-buy {
  font-weight: 600;
  margin: 0em 1em;
}
.ProductDetails-action-buy._3tTAW:not([disabled]):hover {
  background-color: rgba(239, 108, 0, 0.9);
}

.product-details-right {
  width: 65%;
  overflow: auto;
}

.product-details-tabs ._3oZmF {
  position: sticky;
  top: 0rem;
  background: white;
  z-index: 100;
}

.product-details-tabs ._26SP9 {
  outline: none;
}

.product-details-container .product-details-left .back-to-store {
  margin-top: 1em;
  background: #4A4A4A;
  color: #eee;
  font-weight: bold;
  width: 320px;
  border-radius: 4px;
  padding-top: .1em;
  text-transform: none;
  font-size: 1.2em;
  font-family: "Harmonia Bold";
  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
}

.back-to-store ._3aBSX {
  position: absolute;
  left: 1em;
  bottom: .04em;
  font-size: 1.5em;
}

.details-action {
  text-align: center;
  width:20rem;
  margin-top: 1rem;
}
.details-action--cart._3tTAW:not([disabled])._221ic, ._3tTAW:not([disabled])._3IRMZ {
  background-color: #FFCC33;
  color: #3c3b2b;
  font-family: "Harmonia Regular";
  font-weight: 600;
}


.product-page-loader {
  width: 100%;
  height: 100%;
  position: relative;
  display: none;
}

/* FOR IPAD AND IPAD PRO */
@media screen and (min-width: 760px) and (max-width: 1100px) {

  .product-details-left {
    width: 45%;
  }

  .product-details-right {
    width: 55%;
  }


}

/*for mobile*/
@media screen and (max-width: 750px) {
  .ShopPage-product-details .ShopPage-details {
    display: none;
  }
  .ShopPage-product-details .ShopPage-banner {
    display: none;
  }
  .product-details-container {
    flex-direction: column;
    height: 100%;
    position: relative;
    padding: 0;
  }

  .product-details-info-sticky {
    margin-top: 5.2rem;
    z-index: 150;
    background: white;
    right: 0;
    left: 0;
    width: 100% !important;
    box-shadow: 0px 4px 10px 0px;
    padding-left: 1em;
    height: auto;
    transition: margin 1s, height 1s;
    transition-timing-function: cubic-bezier(0.42,0,0.58,1);
  }

  .product-details-left {
    width: 100%;
    padding: 0em 1em;
  }
  .product-details-title {
    width: 100%;
    font-size: 1.2em;
  }
  .product-details-price {
    font-size: 1em;
  }
  .product-details-price-title .Stars {
    height: 1.8em;
  }
  .product-details-slider {
    width: 100%;
  }
  .image-gallery-thumbnails-wrapper {
    display: none;
  }

  .ProductDetails-action {
    width: 100%;
  }

  .ProductDetails--toggle {
    position: relative;
    top: 8px;
    left: 15px;
  }

  .product-details-right {
    margin-top: 1em;
    width: 100%;
    padding: 0em .2em;
  }
  .product-details-left--img-main>div>div {
    display: none !important;
  }
  .product-details-left--img-main>div>img  {
    width: 18rem;
    height: 18rem;

  }

  .product-page-loader {
    height: 100vh;
  }

  .product-details-container .product-details-left .back-to-store {
    width: 100%;
    margin-top: 1em;
  }
}

